--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <ul>
                 <li>Born: 24/11/1984 Turin (ITALY)</li>
                 <br>
+                <li>@: gl.tiengo@gmail.com</li>
+                <br>
+                <li>Mobile: +39.349.425.7041</li>
+                <br>
                 <li>Driving licence: B</li>
                 <br>
                 <li>Spoken languages:<br>Italiano/Français/English</li>
