add style and photo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/46582eef20.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 
@@ -34,7 +35,7 @@
                 <li>Spoken languages:<br>Italiano/Français/English</li>
                 <br>
             </ul>
-            <img src="img/me.jpg" max width="220px">
+
         </div>
 
 
@@ -42,9 +43,9 @@
             <p style="text-align: center;"><i class="fas fa-graduation-cap fa-3x center"></i></p>
             <br>
             <ul>
-                <li>Professional degree: Administrative and accounting<br>at: C.I.O.F.S. F.P. Maria Mazzarello, Turin (ITALY)</li>
+                <li>Professional degree:<br><br><b>Administrative and accounting</b><br>at: C.I.O.F.S. F.P. Maria Mazzarello, Turin (ITALY)</li>
                 <br>
-                <li>Professional degree:<br>Watchmaker<br>at: Società Scuola Professionale Orologiai, Turin (ITALY)</li>
+                <li>Professional degree:<br><br><b>Watchmaker</b><br>at: Società Scuola Professionale Orologiai, Turin (ITALY)</li>
                 <br>
             </ul>
         </div>
@@ -70,6 +71,21 @@
             </ul>
         </div>
     </div>
+
+    <h2 style="text-align: center;">GALLERIA - GALLERY - GALERIE:</h2>
+
+    <div id="bio">
+
+        <div class="container">
+            <img id="photo-of-hero" src="img/me.jpg" alt="photo of me"><img id="photo-of-hero" src="img/2.jpg" alt="photo-of-my-family"><img id="photo-of-hero" src="img/right-side-image_4.jpg" alt="photo of me"><img id="photo-of-hero" src="img/19_small.jpg"
+                alt="my-phoyo">
+            <img id="photo-of-hero" src="img/DSC_2274.JPG" alt="photo of me"><img id="photo-of-hero" src="img/16.jpg" alt="my-photo"><img id="photo-of-hero" src="img/550x550.jpg" alt="klimt"><img id="photo-of-hero" src="img/music.jpg" alt="music">
+
+        </div>
+
+
+    </div>
+
     <h2 style="text-align: center; font-family: Rajdhani, sans-serif;">PASSIONI E MOTIVAZIONI - PASSIONS AND MOTIVATIONS - PASSIONS ET MOTIVATIONS:</h2>
     <div id="grid1">
         <div>
