--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
             <img id="photo-of-hero" src="img/me.jpg" alt="photo of me"><img id="photo-of-hero" src="img/2.jpg" alt="photo-of-my-family"><img id="photo-of-hero" src="img/right-side-image_4.jpg" alt="photo of me"><img id="photo-of-hero" src="img/19_small.jpg"
                 alt="my-phoyo">
-            <img id="photo-of-hero" src="img/DSC_2274.JPG" alt="photo of me"><img id="photo-of-hero" src="img/16.jpg" alt="my-photo"><img id="photo-of-hero" src="img/550x550.jpg" alt="klimt"><img id="photo-of-hero" src="img/music.jpg" alt="music">
+            <img id="photo-of-hero" src="img/DSC_2274.JPG" alt="photo of me"><img id="photo-of-hero" src="img/16.JPG" alt="my-photo"><img id="photo-of-hero" src="img/550x550.jpg" alt="klimt"><img id="photo-of-hero" src="img/music.jpg" alt="music">
 
         </div>
 
