--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
             <p style="text-align: center;"><i class="fa fa-id-card-o fa-3x center" aria-hidden="true"></i></p>
             <br>
             <ul>
-                <li>Born: 24/11/1984 Turin (ITALY)</li>
-                <br>
-                <li>@: gl.tiengo@gmail.com</li>
-                <br>
-                <li>Mobile: +39.349.425.7041</li>
-                <br>
-                <li>Driving licence: B</li>
-                <br>
-                <li>Spoken languages:<br>Italiano/Français/English</li>
-                <br>
+                <li>Born: 24/11/1984 Turin (ITALY)<br><br></li>
+
+                <li>@: <b>gl.tiengo@gmail.com</b><br><br></li>
+
+                <li>Mobile: <b>+39.349.425.7041</b><br><br></li>
+
+                <li>Driving licence: B<br><br></li>
+
+                <li>Spoken languages:<br>Italiano/Français/English<br></li>
+
             </ul>
 
         </div>
@@ -43,10 +43,10 @@
             <p style="text-align: center;"><i class="fas fa-graduation-cap fa-3x center"></i></p>
             <br>
             <ul>
-                <li>Professional degree:<br><br><b>Administrative and accounting</b><br>at: C.I.O.F.S. F.P. Maria Mazzarello, Turin (ITALY)</li>
-                <br>
-                <li>Professional degree:<br><br><b>Watchmaker</b><br>at: Società Scuola Professionale Orologiai, Turin (ITALY)</li>
-                <br>
+                <li>Professional degree:<br><br><b>Administrative and accounting</b><br>at: C.I.O.F.S. F.P. Maria Mazzarello, Turin (ITALY)<br></li>
+
+                <li>Professional degree:<br><br><b>Watchmaker</b><br>at: Società Scuola Professionale Orologiai, Turin (ITALY)<br></li>
+
             </ul>
         </div>
 
@@ -56,18 +56,18 @@
             <p style="text-align: center;"><i class="fas fa-award fa-3x center"></i></p>
             <br>
             <ul>
-                <li>Google Digital Training: Digital Marketing<br>at: Google EMEA</li>
-                <br>
-                <li>HTML Fundamentals course<br>at: Sololearn.com</li>
-                <br>
-                <li>CSS Fundamentals course<br>at: Sololearn.com</li>
-                <br>
-                <li>Java Tutorial course<br>at: Sololearn.com</li>
-                <br>
-                <li>JavaScript Tutorial course<br>at: Sololearn.com</li>
-                <br>
-                <li>PHP Tutorial course<br>at: Sololearn.com</li>
-                <br>
+                <li>Google Digital Training: Digital Marketing<br>at: Google EMEA<br><br></li>
+
+                <li>HTML Fundamentals course<br>at: Sololearn.com<br><br></li>
+
+                <li>CSS Fundamentals course<br>at: Sololearn.com<br><br></li>
+
+                <li>Java Tutorial course<br>at: Sololearn.com<br><br></li>
+
+                <li>JavaScript Tutorial course<br>at: Sololearn.com<br><br></li>
+
+                <li>PHP Tutorial course<br>at: Sololearn.com<br><br></li>
+
             </ul>
         </div>
     </div>
@@ -77,9 +77,8 @@
     <div id="bio">
 
         <div class="container">
-            <img id="photo-of-hero" src="img/me.jpg" alt="photo of me"><img id="photo-of-hero" src="img/2.jpg" alt="photo-of-my-family"><img id="photo-of-hero" src="img/right-side-image_4.jpg" alt="photo of me"><img id="photo-of-hero" src="img/19_small.jpg"
-                alt="my-phoyo">
-            <img id="photo-of-hero" src="img/DSC_2274.JPG" alt="photo of me"><img id="photo-of-hero" src="img/16.JPG" alt="my-photo"><img id="photo-of-hero" src="img/550x550.jpg" alt="klimt"><img id="photo-of-hero" src="img/music.jpg" alt="music">
+            <img src="img/me.jpg" alt="photo-of-me"><img src="img/2.jpg" alt="family"><img src="img/right-side-image_4.jpg" alt="coding"><img src="img/19_small.jpg" alt="art">
+            <img src="img/DSC_2274.JPG" alt="basket"><img src="img/16.JPG" alt="my-photo"><img src="img/550x550.jpg" alt="klimt"><img src="img/music.jpg" alt="music">
 
         </div>
 
@@ -140,9 +139,9 @@
                 <li>Emissione ricevute, rimborsi e cambi</li>
                 <li>Gestione file d'attesa</li>
                 <li>Pulizia e ordine della postazione</li>
-                <li>Verifica prodotti al passaggio in cassa</li>
+                <li>Verifica prodotti al passaggio in cassa<br><br></li>
             </ul>
-            <br>
+
             <h3>2008-2019 Ruvolo & Figli S.n.c. Torino (Italy)</h3>
             <h4>Assistente commerciale</h4>
             <ul>
@@ -154,9 +153,9 @@
                 <li>Formazione del nuovo personale</li>
                 <li>Gestione rete informatica aziendale</li>
                 <li>Gestione sito internet aziendale</li>
-                <li>Ricerca fornitori e clienti</li>
+                <li>Ricerca fornitori e clienti<br><br></li>
             </ul>
-            <br>
+
             <h3>2005-2008 Orologica S.a.s. Torino (Italy)</h3>
             <h4>Tecnico Orologiaio</h4>
             <ul>
@@ -208,9 +207,9 @@
                 <li>Émettre des reçus, des remboursements ou des changements</li>
                 <li>Gérer la file d'attente</li>
                 <li>Assurer l’entretien de son poste </li>
-                <li>Contrôler les produits lors du passage en caisse</li>
+                <li>Contrôler les produits lors du passage en caisse<br><br></li>
             </ul>
-            <br>
+
             <h3>2008-2019 Ruvolo & Figli S.n.c. Turin (Italy)</h3>
             <h4>Assistant commercial</h4>
             <ul>
