--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div id="bio">
 
         <div class="container">
-            <img class="responsive" src="img/me.jpg" alt="photo-of-me"><img src="img/2.jpg" alt="family"><img src="img/right-side-image_4.jpg" alt="coding"><img src="img/19_small.jpg" alt="art">
+            <img src="img/me.jpg" alt="photo-of-me"><img src="img/2.jpg" alt="family"><img src="img/right-side-image_4.jpg" alt="coding"><img src="img/19_small.jpg" alt="art">
             <img src="img/DSC_2274.JPG" alt="basket"><img src="img/16.JPG" alt="my-photo"><img src="img/550x550.jpg" alt="klimt"><img src="img/music.jpg" alt="music">
 
         </div>
