fix media text 1

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     <div id="bio">
 
         <div class="container">
-            <img src="img/me.jpg" alt="photo-of-me"><img src="img/2.jpg" alt="family"><img src="img/right-side-image_4.jpg" alt="coding"><img src="img/19_small.jpg" alt="art">
-            <img src="img/DSC_2274.JPG" alt="basket"><img src="img/16.JPG" alt="my-photo"><img src="img/550x550.jpg" alt="klimt"><img src="img/music.jpg" alt="music">
+            <img class="responsive" src="img/me.jpg" alt="photo-of-me"><img class="responsive" src="img/2.jpg" alt="family"><img class="responsive" src="img/right-side-image_4.jpg" alt="coding"><img class="responsive" src="img/19_small.jpg" alt="art">
+            <img class="responsive" src="img/DSC_2274.JPG" alt="basket"><img class="responsive" src="img/16.JPG" alt="my-photo"><img class="responsive" src="img/550x550.jpg" alt="klimt"><img class="responsive" src="img/music.jpg" alt="music">
 
         </div>
 
