--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p style="text-align: center;"><i class="fas fa-graduation-cap fa-3x center"></i></p>
             <br>
             <ul>
-                <li>Professional degree:<br><br><b>Administrative and accounting</b><br>at: C.I.O.F.S. F.P. Maria Mazzarello, Turin (ITALY)<br></li>
+                <li>Professional degree:<br><br><b>Administrative and accounting</b><br>at: C.I.O.F.S. F.P. Maria Mazzarello, Turin (ITALY)<br><br></li>
 
                 <li>Professional degree:<br><br><b>Watchmaker</b><br>at: Società Scuola Professionale Orologiai, Turin (ITALY)<br></li>
 
